# aiogram-bot-template

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
bot/: __init__.py  __main__.py  presets.py
bot/constants/: __init__.py  role.py
bot/models/: user.py
bot/template/: config.py
bot/template/constants/: role.py
bot/template/middlewares/outer/: database.py  i18n.py
bot/template/models/: __init__.py  base.py  user.py
bot/template/repositories/: abstract.py  user.py
bot/template/storages/postgres/: storage.py
bot/template/storages/postgres/ext/: helpers.py  pgsql_uuid7.py
bot/template/utils/i18n/: core.py
