[tool.poetry]
name = "aiogram-bot-template"
version = "0.0.1"
description = "Simple and scalable aiogram bot template"
authors = ["Noct"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.15.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
sqlmodel = "^0.0.22"
sqlalchemy = "^2.0.36"
greenlet = "^3.1.1"
asyncpg = "^0.30.0"
mypy = "^1.13.0"
alembic = "^1.14.0"
aiogram-i18n = "^1.4"
fluent-compiler = "^1.1"

[tool.poetry.group.redis]
optional = true

[tool.poetry.group.redis.dependencies]
redis = "^5.1.1"

[tool.poetry.group.openai]
optional = true

[tool.poetry.group.openai.dependencies]
openai = "^1.54.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
